--- a/test3/面向对象.md
+++ b/test3/面向对象.md
@@ -4,3 +4,22 @@
 西.在面对对象编程的世界中,一切皆对象,对象都有属性和行为,每个对象都是独一
 无二的,而且对象一定属于某个类,当我们把一大堆拥有共同特征的对象的静态特征(属性)
 和动态特征(行为)都抽取出来后,就可以定义出一个叫做类的东西.
+
+### 定义类
+在python中可以使用`class`关键字定义类, 然后再类中通过之前学习过的函数来定义
+方法. 这样就可以将对象的动态特征描述出来,代码如下.
+
+```python
+class Student(object):
+    # __init__是一个特殊方法用于创建对象时进行初始化操作
+    # 通过这个方法我们可以为学生对象绑定name和age两个属性
+    def __init__(self, name, age):
+        self.name = name
+        self.age = age
+    def stufy(self, course_name):
+        print('{}正在学习{}'.format(self.name, course_name))
+    # pep8 要求标识符的名字用全小写多个单词用下划线连接
+    def watch_av(self):
+        if self.age <18:
+            print('{}'.format(self.name))
+```
