--- a/test3/面向对象.md
+++ b/test3/面向对象.md
@@ -23,3 +23,18 @@ class Student(object):
         if self.age <18:
             print('{}'.format(self.name))
 ```
+> **说明**:写在类中的函数, 我们通常称之为(对象的)方法, 这些方法就是对象可以接受的消息
+
+### 创建和使用对象
+
+当我们定义好一个类之后, 可以通过下面的方式来创建对象并给对象法消息
+```python
+def main():
+    # 创建学生对象并指定姓名和年龄
+    stu1 = Student('mwq', 24)
+    stu1.study('python程序设计')
+if __name__ == '__main__':
+    main()
+```
+
+
