--- a/test3/面向对象.md
+++ b/test3/面向对象.md
@@ -36,5 +36,12 @@ def main():
 if __name__ == '__main__':
     main()
 ```
+### 面向对象的支柱
+
+面向对象有三大支柱: 封装, 继承和多态. 
+封装的理解是隐藏一切可以隐藏的实现细节,只向外界暴露简单的编程接口.
+我们在类中定义的方法就是把数据和对数据的操作封装起来了,在我们创建了对象之后,
+只需要给对象发送一个消息就可以执行方法中代码, 也就是说我们只需要方法的名字和传入的
+参数,而不需要知道方法的内部实现技巧.
 
 
